force-app/main/default/objects/OfferContactRole__c/OfferContactRole__c.object-meta.xml
<CustomObject>
    <label>Offre Contact Role</label>
    <nameField>
        <displayFormat>OCR-{000000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offre Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>