force-app/main/default/objects/OfferContactRole__c/fields/Admintrainingdate__c.field-meta.xml
<CustomField>
    <fullName>Admintrainingdate__c</fullName>
    <label>Admin training date</label>
    <type>Date</type>
</CustomField>