force-app/main/default/objects/OfferContactRole__c/fields/BItrainingdate__c.field-meta.xml
<CustomField>
    <fullName>BItrainingdate__c</fullName>
    <label>BI Training date</label>
    <type>Date</type>
</CustomField>