force-app/main/default/objects/OfferContactRole__c/fields/Certificatedeliverydate__c.field-meta.xml
<CustomField>
    <fullName>Certificatedeliverydate__c</fullName>
    <label>Certificate delivery date</label>
    <type>Date</type>
</CustomField>