force-app/main/default/objects/OfferContactRole__c/fields/Certificateexpirationdate__c.field-meta.xml
<CustomField>
    <fullName>Certificateexpirationdate__c</fullName>
    <label>Certificate expiration date</label>
    <type>Date</type>
</CustomField>