force-app/main/default/objects/OfferContactRole__c/fields/Certificatetype__c.field-meta.xml
<CustomField>
    <fullName>Certificatetype__c</fullName>
    <label>Certificate type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A la volée</fullName>
            </value>
            <value>
                <fullName>Stocké</fullName>
            </value>
            <value>
                <fullName>Serveur</fullName>
            </value>
            <value>
                <fullName>Applet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>