force-app/main/default/objects/OfferContactRole__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipName>Contact_Roles1</relationshipName>
    <type>Lookup</type>
</CustomField>