force-app/main/default/objects/OfferContactRole__c/fields/Revocationdate__c.field-meta.xml
<CustomField>
    <fullName>Revocationdate__c</fullName>
    <label>Revocation date</label>
    <type>Date</type>
</CustomField>