force-app/main/default/objects/OfferContactRole__c/fields/RoleForPixid__c.field-meta.xml
<CustomField>
    <fullName>RoleForPixid__c</fullName>
    <label>Role for Pixid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Administrator Back up</fullName>
            </value>
            <value>
                <fullName>Cash collection contact</fullName>
            </value>
            <value>
                <fullName>Certificate owner</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>Invoice contact</fullName>
            </value>
            <value>
                <fullName>Key contact</fullName>
            </value>
            <value>
                <fullName>Key contact Back up</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Sponsor Contact</fullName>
            </value>
            <value>
                <fullName>Technical contact</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>